--- a/PortfolioManager/package.json
+++ b/PortfolioManager/package.json
@@ -24,6 +24,7 @@
     "angular-auth-oidc-client": "^11.1.3",
     "bootstrap": "^4.5.0",
     "font-awesome": "^4.7.0",
+    "ngx-spinner": "^9.0.2",
     "oidc-client": "^1.10.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
